row/row0mysql.c
@@ -54,27 +54,6 @@ static const char S_innodb_tablespace_monitor[] = "innodb_tablespace_monitor";
 static const char S_innodb_table_monitor[] = "innodb_table_monitor";
 static const char S_innodb_mem_validate[] = "innodb_mem_validate";
 
-/* Name suffix for recovered orphaned temporary tables */
-static const char S_recover_innodb_tmp_table[] = "_recover_innodb_tmp_table";
-/***********************************************************************
-Determine if the given name ends in the suffix reserved for recovered
-orphaned temporary tables. */
-static
-ibool
-row_mysql_is_recovered_tmp_table(
-/*=============================*/
-				 /* out: TRUE if table name ends in
-				 the reserved suffix */
-	const char*	name)
-{
-	ulint	namelen	= strlen(name) + 1;
-	return(namelen >= sizeof S_recover_innodb_tmp_table
-		&& !memcmp(name + namelen -
-			sizeof S_recover_innodb_tmp_table,
-			S_recover_innodb_tmp_table,
-			sizeof S_recover_innodb_tmp_table));
-}
-
 /***********************************************************************
 Determine if the given name is a name reserved for MySQL system tables. */
 static
@@ -1660,48 +1639,6 @@ row_get_mysql_key_number_for_index(
 }
 
 /*************************************************************************
-Recovers an orphaned tmp table inside InnoDB by renaming it. In the table
-name #sql becomes rsql, and "_recover_innodb_tmp_table" is catenated to
-the end of name. table->name should be of the form
-"dbname/rsql..._recover_innodb_tmp_table". This renames a table whose
-name is "#sql..." */
-static
-int
-row_mysql_recover_tmp_table(
-/*========================*/
-				/* out: error code or DB_SUCCESS */
-	dict_table_t*	table,	/* in: table definition */
-	trx_t*		trx)	/* in: transaction handle */
-{
-	const char*	ptr	= strstr(table->name, "/rsql");
-
-	if (!ptr) {
-		/* table name does not begin with "/rsql" */
-		dict_mem_table_free(table);
-		trx_commit_for_mysql(trx);
-
-		return(DB_ERROR);
-	}
-	else {
-		int	status;
-		int	namelen = (int) strlen(table->name);
-		char*	old_name = mem_strdupl(table->name, namelen);
-		/* replace "rsql" with "#sql" */
-		old_name[ptr - table->name + 1] = '#';
-		/* remove "_recover_innodb_tmp_table" suffix */
-		ut_ad(namelen > (int) sizeof S_recover_innodb_tmp_table);
-		ut_ad(!strcmp(old_name + namelen + 1 -
-			sizeof S_recover_innodb_tmp_table,
-			S_recover_innodb_tmp_table));
-		old_name[namelen + 1 - sizeof S_recover_innodb_tmp_table] = 0;
-		status = row_rename_table_for_mysql(old_name,
-						table->name, trx);
-		mem_free(old_name);
-		return(status);
-	}
-}
-
-/*************************************************************************
 Locks the data dictionary in shared mode from modifications, for performing
 foreign key check, rollback, or other operation invisible to MySQL. */
 
@@ -1844,18 +1781,6 @@ row_create_table_for_mysql(
 	}
 
 	trx_start_if_not_started(trx);
-
-	if (row_mysql_is_recovered_tmp_table(table->name)) {
-
-		/* MySQL prevents accessing of tables whose name begins
-		with #sql, that is temporary tables. If mysqld crashes in
-		the middle of an ALTER TABLE, we may get an orphaned
-		#sql-table in the tablespace. We have here a special
-		mechanism to recover such tables by renaming them to
-		rsql... */
-
-		return(row_mysql_recover_tmp_table(table, trx));
-	}
 
 	/* The table name is prefixed with the database name and a '/'.
 	Certain table names starting with 'innodb_' have their special
@@ -2063,11 +1988,6 @@ row_create_index_for_mysql(
 		}
 	}
 
-	if (row_mysql_is_recovered_tmp_table(index->table_name)) {
-
-		return(DB_SUCCESS);
-	}
-
 	heap = mem_heap_create(512);
 
 	trx->dict_operation = TRUE;
@@ -2141,11 +2061,6 @@ row_table_add_foreign_constraints(
 	trx->op_info = "adding foreign keys";
 
 	trx_start_if_not_started(trx);
-
-	if (row_mysql_is_recovered_tmp_table(name)) {
-
-		return(DB_SUCCESS);
-	}
 
 	trx->dict_operation = TRUE;
 
@@ -3495,7 +3410,6 @@ row_rename_table_for_mysql(
 	mem_heap_t*	heap			= NULL;
 	const char**	constraints_to_drop	= NULL;
 	ulint		n_constraints_to_drop	= 0;
-	ibool		recovering_temp_table	= FALSE;
 	ibool		old_is_tmp, new_is_tmp;
 	pars_info_t*	info			= NULL;
 
@@ -3533,15 +3447,10 @@ row_rename_table_for_mysql(
 	old_is_tmp = row_is_mysql_tmp_table_name(old_name);
 	new_is_tmp = row_is_mysql_tmp_table_name(new_name);
 
-	if (row_mysql_is_recovered_tmp_table(new_name)) {
+	/* Serialize data dictionary operations with dictionary mutex:
+	no deadlocks can occur then in these operations */
 
-		recovering_temp_table = TRUE;
-	} else {
-		/* Serialize data dictionary operations with dictionary mutex:
-		no deadlocks can occur then in these operations */
-
-		row_mysql_lock_data_dictionary(trx);
-	}
+	row_mysql_lock_data_dictionary(trx);
 
 	table = dict_table_get_low(old_name);
 
@@ -3797,10 +3706,6 @@ end:
 
 funct_exit:
 	trx_commit_for_mysql(trx);
-
-	if (!recovering_temp_table) {
-		row_mysql_unlock_data_dictionary(trx);
-	}
 
 	if (UNIV_LIKELY_NULL(heap)) {
 		mem_heap_free(heap);
